syntax = "proto3";
package rangeserver;

message RangeId {
    string keyspace_id = 1;
    string range_id = 2;
}

message RangeKey {
    RangeId range = 1;
    bytes key = 2;
}

service RangeServer {
    rpc Prefetch (PrefetchRequest) returns (PrefetchResponse);
    rpc GetStatistics (GetStatisticsRequest) returns (GetStatisticsResponse);
}

message PrefetchRequest {
    // Request message contains a range_key, which is a tuple containing a range and key to prefetch
    repeated RangeKey range_key = 1;
    string transaction_id = 2;
}

message PrefetchResponse {
    string status = 1;
}

message GetStatisticsRequest {}

message GetStatisticsResponse {
    repeated RangeStatistics range_statistics = 1;
}

message RangeStatistics {
    string range_id = 1;
    repeated int64 num_waiters = 2;
    repeated int64 num_pending_commits = 3;
    repeated string request_timestamps = 4;
    repeated string predictions = 5;
    repeated string avg_delta_between_requests = 6;
    repeated string avg_entropies = 7;
}
